(chore) updated github workflow